#102 refactored datastructure to store more information regarding pv